1.1.2 updated about and fixed text align

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@ body{
     overflow-x: hidden;
     padding: 0px;
     margin: 0px;
+    display: flex;
 }
 h1, h3{
     color:#fdf6e3;
@@ -36,7 +37,7 @@ h4{
     z-index: -1;
     margin: 0;
     padding: 0;
-    position: relative;
+    position: fixed;
     bottom: 0;
 }
 #canvasDiv{
@@ -46,14 +47,19 @@ h4{
     height: 100%;
 }
 #header{
-    margin-top: -30%;  /* note this negative margin is because it overlaps the canvas */
-    margin-bottom: 100%;
-    margin-left: 24%;
+    /* margin-top: -30%; note this negative margin is because it overlaps the canvas */
+    /* margin-bottom: 100%;
+    margin-left: 24%; */
+    align-items: center;
     position: fixed;
+    top: 45%;
+    left: 20%;
+    width: 60%;
     z-index: -1;
     filter: blur(0px);
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 #aboutDiv{
     display: flex;
